--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro e Inicio de Sesión</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
     <div class="container">
@@ -24,6 +24,6 @@
         </form>
     </div>
 
-    <script src="script.js"></script>
+    <script src="./JS/script.js"></script>
 </body>
 </html>
